# GildedRose-Refactoring-Kata

python/: .gitignore  pyproject.toml  test_gilded_rose.py
